[package]
name = "api-rust"
version = "0.1.0"
authors = ["Connor Winiarczyk <connorwiniarczyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.1"
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
