[package]
name = "api-rust"
version = "0.1.0"
authors = ["Connor Winiarczyk <connorwiniarczyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-graphql = "2.8.1"
# rouille = "^0"
tide = "^0"
dotenv = "^0"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
redis = "*"

chrono = "0.4"
regex = "^0"
lazy_static = "^0"

sqlx = { version = "0.4.1", features = ["macros", "chrono", "postgres", "runtime-async-std-native-tls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
reqwest = "0.10"
surf = "1.0.3"
